--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,34 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.1.3",
+    "@ant-design/icons": "^5.1.4",
+    "@edenlabs/eden-sdk": "^0.1.0",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@types/form-data": "^2.5.0",
-    "@types/node-fetch": "^2.6.3",
-    "antd": "^5.0.7",
-    "axios": "^1.2.1",
-    "dotenv": "^16.0.3",
-    "eden-sdk": "^0.2.39",
+    "@types/node-fetch": "^2.6.4",
+    "antd": "^5.7.0",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "ethereumjs-abi": "https://registry.npmjs.org/ethereumjs-abi/-/ethereumjs-abi-0.6.8.tgz",
     "ethers": "^5.7.2",
     "form-data": "^4.0.0",
+    "install": "^0.13.0",
     "iron-session": "^6.3.1",
-    "merkletreejs": "^0.3.9",
+    "merkletreejs": "^0.3.10",
+    "multipart": "^0.1.5",
     "next": "13.0.7",
+    "npm": "^9.8.0",
+    "openai": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "siwe": "^1.1.6",
-    "swr": "^2.0.0",
-    "wagmi": "^0.11.5"
+    "styled-components": "^5.3.11",
+    "swr": "^2.2.0",
+    "wagmi": "^0.11.7"
   },
   "devDependencies": {
-    "@types/formidable": "^2.0.5",
+    "@types/formidable": "^2.0.6",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
-    "formidable": "^2.1.1",
+    "formidable": "^2.1.2",
     "typescript": "4.9.4"
   },
   "resolutions": {
